--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
